Time: 9 ms (14.8%), Space: 45 MB (79.02%) - LeetHub